--- a/Base/recportal/templates/recportal/base.html
+++ b/Base/recportal/templates/recportal/base.html
@@ -28,7 +28,7 @@
  </ul> -->
 
  <ul id="senior_dropdown" class="dropdown-content">
-  <li><a href="{% url 'recportal:mypitches' %}">My Pitches</a></li>
+  <li><a href="{% url 'recportal:myassessments' %}">My Assessments</a></li>
   <li><a href="{% url 'recportal:mycandidates' %}">My Candidates</a></li>
   <li><a href="{% url 'recportal:recommendations' %}">Recommendations<span class="badge">{{request.user.senior.active_recommendations_count}}</span></a></li>
 </ul>
@@ -37,7 +37,7 @@
    <div class="nav-wrapper">
      <a href="{% url 'recportal:home' %}" class="brand-logo">Recruitments Portal</a>
      <ul class="right hide-on-med-and-down">
-       <li><a href="{% url 'recportal:pitches' %}">All Pitches</a></li>
+       <li><a href="{% url 'recportal:assessments' %}">All Assessments</a></li>
        <li><a href="{% url 'recportal:candidates' %}">Candidates</a></li>
        <!-- <li><a class="dropdown-trigger" data-target="tasks_dropdown">Tasks<i class="material-icons right">arrow_drop_down</i></a></li> -->
        <li><a class="dropdown-trigger" data-target="senior_dropdown">Senior Panel<i class="material-icons right">arrow_drop_down</i></a></li>
