--- a/Base/recportal/templates/recportal/assessments.html
+++ b/Base/recportal/templates/recportal/assessments.html
@@ -1,7 +1,7 @@
 {% extends 'recportal/base.html' %}
 
 {% block title %}
-  <title> Recruitments Portal -- All Pitches </title>
+  <title> Recruitments Portal -- All Assessments </title>
 {% endblock %}
 
 {% block content %}
@@ -10,7 +10,7 @@
   <table>
 
     <tr>
-      <td colspan="4" class="center-align light-blue lighten-1"><b> Pitch Details </b></td>
+      <td colspan="4" class="center-align light-blue lighten-1"><b> Assessment Details </b></td>
       <td colspan="5" class="center-align light-blue lighten-2"><b> Task Details </b></td>
     </tr>
 
@@ -26,24 +26,24 @@
       <td class="light-blue lighten-2"><b> Date of Completion </b></td>
     </tr>
 
-    {% for pitch in pitches %}
+    {% for assessment in assessments %}
     <tr class="light-blue lighten-4">
-      <td> <a href="{% url 'recportal:profile' pitch.candidate.first_name pitch.candidate.last_name %}"> {{pitch.candidate.first_name}} {{pitch.candidate.last_name}} </a> </td>
-      <td> {{pitch.senior.first_name}} {{pitch.senior.last_name}} </td>
-      <td> {{pitch.team}} </td>
-      <td> {{pitch.approved}} </td>
-      <td> {{pitch.task.title}} </td>
-      <td> {{pitch.task.description}} </td>
-      <td> {{pitch.task.issuing_date}} </td>
-      <td> {{pitch.task.due_date}} </td>
+      <td> <a href="{% url 'recportal:profile' assessment.candidate.first_name assessment.candidate.last_name %}"> {{assessment.candidate.first_name}} {{assessment.candidate.last_name}} </a> </td>
+      <td> {{assessment.senior.first_name}} {{assessment.senior.last_name}} </td>
+      <td> {{assessment.team}} </td>
+      <td> {{assessment.approved}} </td>
+      <td> {{assessment.task.title}} </td>
+      <td> {{assessment.task.description}} </td>
+      <td> {{assessment.task.issuing_date}} </td>
+      <td> {{assessment.task.due_date}} </td>
 
-            {% if pitch.task.completion_date %}
+            {% if assessment.task.completion_date %}
               <td class="green-text">
-                {{pitch.task.completion_date}} {% if pitch.task.is_overdue %}<br><p class="red-text"> (overdue) </p>{% endif %}
+                {{assessment.task.completion_date}} {% if assessment.task.is_overdue %}<br><p class="red-text"> (overdue) </p>{% endif %}
              </td>
-            {% elif pitch.task.is_overdue %}
+            {% elif assessment.task.is_overdue %}
               <td class="red-text"> overdue </td>
-            {% elif pitch.task.is_ongoing %}
+            {% elif assessment.task.is_ongoing %}
               <td> ongoing </td>
             {% else %}
               <td> error, please notify the dev </td>
