--- a/Base/recportal/templates/recportal/myassessments.html
+++ b/Base/recportal/templates/recportal/myassessments.html
@@ -23,7 +23,7 @@
       <tr>
         <td class="light-blue lighten-1"><b> Candidate </b></td>
         <td class="light-blue lighten-1"><b> Potential Team </b></td>
-        <td class="light-blue lighten-1"><b> Approved </b></td>
+        <td class="light-blue lighten-1"><b> Pitched </b></td>
         <td class="light-blue lighten-2"><b> Title </b></td>
         <td class="light-blue lighten-2"><b> Description </b></td>
         <td class="light-blue lighten-2"><b> Issuing Date </b></td>
@@ -35,7 +35,7 @@
       <tr class="light-blue lighten-4">
         <td> <a href="{% url 'recportal:profile' assessment.candidate.first_name assessment.candidate.last_name %}"> {{assessment.candidate.first_name}} {{assessment.candidate.last_name}} </a> </td>
         <td> {{assessment.team}} </td>
-        <td> {{assessment.approved}} </td>
+        <td> {{assessment.pitched}} </td>
         <td> {{assessment.task.title}} </td>
         <td> {{assessment.task.description}} </td>
         <td> {{assessment.task.issuing_date}} </td>
