fixed a typo in the recommend page, removed print statements and made it so that when you recommend a candidate to your own team, you don't recommend to yourself.

--- a/Base/recportal/templates/recportal/recommend.html
+++ b/Base/recportal/templates/recportal/recommend.html
@@ -55,7 +55,7 @@
         <td> To: </td>
         <td>
           <select form="recommend" name="team" class="browser-default" required>
-              <option value="App Dev"> Frontend </option>
+              <option value="App Dev"> App Dev </option>
               <option value="Backend"> Backend </option>
               <option value="Frontend"> Frontend </option>
               <option value="Graphics"> Graphics </option>
