small change to template for myassessments page

--- a/Base/recportal/templates/recportal/myassessments.html
+++ b/Base/recportal/templates/recportal/myassessments.html
@@ -86,7 +86,7 @@
             </tr>
 
             <tr>
-              <td> Approve Assessment: </td>
+              <td> Pitch: </td>
               <td>
                 <label>
                   <input type="checkbox" name="pitched" value="True" />
