--- a/Base/recportal/templates/recportal/myassessments.html
+++ b/Base/recportal/templates/recportal/myassessments.html
@@ -17,7 +17,7 @@
 
       <tr>
         <td colspan="3" class="center-align light-blue lighten-1"><b> Assessment Details </b></td>
-        <td colspan="5" class="center-align light-blue lighten-2"><b> Task Details </b></td>
+        <td colspan="6" class="center-align light-blue lighten-2"><b> Task Details </b></td>
       </tr>
 
       <tr>
@@ -29,6 +29,7 @@
         <td class="light-blue lighten-2"><b> Issuing Date </b></td>
         <td class="light-blue lighten-2"><b> Due Date </b></td>
         <td class="light-blue lighten-2"><b> Date of Completion </b></td>
+        <td class="light-blue lighten-2"><b> Rubric </b></td>
       </tr>
 
       {% for assessment in myassessments %}
@@ -39,7 +40,7 @@
         <td> {{assessment.task.title}} </td>
         <td> {{assessment.task.description}} </td>
         <td> {{assessment.task.issuing_date}} </td>
-        <td> {{pitassessmentch.task.due_date}} </td>
+        <td> {{assessment.task.due_date}} </td>
 
               {% if assessment.task.completion_date %}
                 <td class="green-text">
@@ -53,7 +54,8 @@
                 <td> error, please notify the dev </td>
               {% endif %}
 
-        </td>
+        <td> {% if assessment.task.rubric %} <a href="{% url 'recportal:download' filename=assessment.task.rubric.name %}"> {{assessment.task.rubric.name}} </a> {% else %} None {% endif %} </td>
+
       </tr>
       {% endfor %}
     </table>
@@ -65,7 +67,7 @@
     <h3 class="center-align"> Update Tasks </h3>
     <br>
     <div class="grey">
-      <form method="post" action="{% url 'recportal:myassessments' %}" id="update">
+      <form method="post" action="{% url 'recportal:myassessments' %}" id="update" enctype="multipart/form-data">
         {% csrf_token %}
           <table>
 
@@ -82,7 +84,12 @@
 
             <tr>
               <td> Date of completion: </td>
-              <td> <input type="date" name="doc" required> </td>
+              <td> <input type="date" name="doc"> </td>
+            </tr>
+
+            <tr>
+              <td> Update Rubric: </td>
+              <td> <input type="file" name="rubric"> </td>
             </tr>
 
             <tr>
